# Indian-Transport-Management-System-ITMS

./: README.md
tms-core-business-logic/: .editorconfig  .env.example  .flake8  .gitignore  Dockerfile  odoo.conf.template  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
tms-driver-portal-ui/: .editorconfig  .eslintrc.js  .gitignore  README.md  __init__.py  __manifest__.py  jsconfig.json  package.json
tms-gps-data-consumer/: .dockerignore  .editorconfig  .env.template  .flake8  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
tms-gps-ingestion-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tms-gps-ingestion-service/.github/workflows/: ci.yml
tms-gps-ingestion-service/docs/: Capacity_Optimisation.csv  Code Design84.md  Dependancy_Tracking.csv  Design Specifications84.md  File Structure84.md  Integration Design84.md  Quality_gates.csv  Repository Description84.md  Resource_Allocation.csv  Skill_Distribution.csv  Sprint_Summary.csv  Task_Resource.csv  Team_Composition.csv  automation_roadmap.csv  performance_benchamarks .csv  quality_gates_2.csv  resource_risk.csv  risk_analysis.csv  risk_analysis_summary.csv  security_test.csv  task_planning.csv  test_case.csv  test_coverage.csv  test_environment.csv  test_plan.csv  timeline.csv  user_stories.csv  user_stories_sprint_recomend.csv  user_stories_summary.csv
tms-gsp-integration-client/: .editorconfig  .flake8  .gitignore  __init__.py  __manifest__.py  docker-compose.yml  pyproject.toml  (+1 more)
(+689 files in other folders)
