[tool.poetry]
name = "tms-gps-ingestion-service"
version = "0.1.0"
description = "High-performance microservice for ingesting and processing real-time GPS data for the Transport Management System."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"
aio-pika = "^9.4.0"
tenacity = "^8.4.1"
structlog = "^24.2.0"
python-json-logger = "^2.0.7"
starlette-prometheus = "^0.10.0"
boto3 = "^1.34.120"
aws-secretsmanager-caching = "^1.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
requests = "^2.32.3" # For synchronous testing scripts if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true